# c-playground

./: .gitignore  CMakeLists.txt  README.md
.vim/: coc-settings.json
OpenCL/: CMakeLists.txt  opencl-test.c
OpenGL/: Star.sln
OpenGL/Star/: CMakeLists.txt  Star.vcxproj  Star.vcxproj.filters  glad.c  main.c
basic/: CMakeLists.txt  anon_func.c  array_2d.c  array_2d_1.c  copy_bytes.c  fizzbuzz.c  lexico.c  memtest.c  sort.c  test.c  test_2.c  word.c
includes/glad/: glad.h
multithreading/: CMakeLists.txt  prime.c
opencl/: CMakeLists.txt
programs/CLinkedList/: CMakeLists.txt  README.md  linked_list.h
programs/CLinkedList/examples/: example.c
programs/DynarC/: CMakeLists.txt  main.c
programs/sine_wave_oscillator/: CMakeLists.txt
programs/txa/: CMakeLists.txt  main.c
